--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
   <!-- FIND AND REPLACE SECTION -->
   <div class="section" id="findReplaceApp">
-    <h1><a href="https://celestial-monocles.github.io/findandreplace/">Find and Replace Text</a></h1>
+    <h1><a href="https://celestial-monocles.github.io/combined-tool/">Find and Replace Text</a></h1>
     <div class="textarea-container">
       <textarea id="inputText" rows="10" placeholder="Enter your text here..."></textarea>
       <button class="paste-button" onclick="pasteToTextarea('inputText')">Paste</button>
